<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>de.kreth.property2java</groupId>
	<artifactId>PropertyToJavaGenerator</artifactId>
	<version>3.0.1-SNAPSHOT</version>

	<properties>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>17</java.version>
		<org.junit.jupiter>5.3.0-M1</org.junit.jupiter>
		<org.slf4j>1.7.36</org.slf4j>
		<org.apache.logging.log4j>2.17.2</org.apache.logging.log4j>

		<timestamp>${maven.build.timestamp}</timestamp>
		<maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.15.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>1.12.0</version>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.8.0</version>
		</dependency>
		<dependency>
			<groupId>org.freemarker</groupId>
			<artifactId>freemarker</artifactId>
			<version>2.3.33</version>
		</dependency>

		<!-- LOGGING -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${org.slf4j}</version>
		</dependency>
		<dependency>
			<groupId>jakarta.annotation</groupId>
			<artifactId>jakarta.annotation-api</artifactId>
			<version>1.3.5</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${org.apache.logging.log4j}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${org.apache.logging.log4j}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>${org.apache.logging.log4j}</version>
			<scope>runtime</scope>
		</dependency>

		<!-- TESTING -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.11.0-RC1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.11.0-RC1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>5.11.0-RC1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-launcher</artifactId>
			<version>1.11.0-RC1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-runner</artifactId>
			<version>1.11.0-RC1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>5.12.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>5.12.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-library</artifactId>
			<version>3.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.assertj</groupId>
		    <artifactId>assertj-core</artifactId>
		    <version>3.26.3</version>
		    <scope>test</scope>
		</dependency>

	</dependencies>

	<distributionManagement>
		<snapshotRepository>
			<id>kreth.snapshots</id>
			<url>https://nexus.markuskreth.de/repository/maven-snapshots/</url>
		</snapshotRepository>
		<repository>
			<id>kreth.releases</id>
			<url>https://nexus.markuskreth.de/repository/maven-releases/</url>
		</repository>
	</distributionManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.0</version>
				<configuration>
					<release>${java.version}</release>
					<compilerArgs>-proc:none</compilerArgs>
				</configuration>
			</plugin>
		    <plugin>
		      <groupId>org.openrewrite.maven</groupId>
		      <artifactId>rewrite-maven-plugin</artifactId>
		      <version>6.15.0</version>
		      <configuration>
		        <activeRecipes>
		          <recipe>org.openrewrite.java.migrate.UpgradeToJava17</recipe>
		        </activeRecipes>
		      </configuration>
		      <dependencies>
		        <dependency>
		          <groupId>org.openrewrite.recipe</groupId>
		          <artifactId>rewrite-migrate-java</artifactId>
		          <version>3.14.1</version>
		        </dependency>
		      </dependencies>
		    </plugin>
		</plugins>
	</build>
	<scm>
		<developerConnection>scm:git:git@github.com:markuskreth/PropertyToJavaGenerator.gitt</developerConnection>
		<connection>scm:git:git@github.com:markuskreth/PropertyToJavaGenerator.git</connection>
    <tag>PropertyToJavaGenerator-3.0.0</tag>
  </scm>
</project>